--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,83 @@
-.grid > div{
-	max-height:40px;
+.grid>div {
+	max-height: 40px;
 }
 
-.grid{
+.grid {
 	display: grid;
 	grid-row-gap: 5px;
 	grid-column-gap: 5px;
-	grid-template-columns: 500px;
+	grid-template-columns: 80%;
 
 	/* Play with: */
-	/* justify-content:; */
+	justify-content: center;
 	/* justify-items:;  */
 	/* align-items:; */
 	/* align-content:; */
- }
-
- 
+}
 
 
-@media screen and (min-width: 776px){
 
-	body{
+
+@media screen and (min-width: 776px) {
+
+	body {
 		background-color: yellow;
 	}
 
-	.grid > div{
-		max-height:none;
+	.grid>div {
+		max-height: none;
 	}
 
 	/* Make this a two column grid. */
-	.grid{
+	.grid {
 
+		grid-template-columns: 45% 45%;
+		justify-content: center;
+		/* align-items: center; */
 
-		
 		/* Play with: */
 		/* justify-content:; */
 		/* align-items:;  */
 
 
-		
- 	}
 
- 	.item1{
- 		 /* Span the entire first row  */
-		
-		  /* grid-column: ; */
- 	}
-	
-	.item2{
+	}
+
+	.item1 {
+		/* Span the entire first row  */
+
+		grid-column: 1 / -1;
+	}
+
+	.item2 {
 		/* Start in row 2 and span 3 rows */
-		/* grid-row:; */
+		grid-row: 2 / span 3;
 
 	}
 
 }
-@media screen and (min-width: 1120px){
-	body{
+
+@media screen and (min-width: 1120px) {
+	body {
 		background-color: green;
 	}
 
 	/* Make this a three column grid using fr. */
-	.grid{
-
+	.grid {
+		grid-template-columns: 1fr 1fr 1fr;
 		/* Why don't we bother with justify here? */
+		/* fr already takes up available space, no need for justify */
 	}
-	.item3{
+
+	.item3 {
 		/* Start in row 2 and span two rows 
 		   Start in column 2 and span two columns */
+		grid-row: 2 / -1;
+		grid-column: 2 / -1;
 
 
 		/* What happens if you try to span 3 columns */
 	}
 
-	
+
 }
